# herpy

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.test.yaml  config.yaml  herpy.yaml
.github/workflows/: rust.yml
etc/herpy/modsecurity/: crs-setup.conf  modsecurity.conf
etc/herpy/modsecurity/rules/: REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf
src/: lib.rs  main.rs  server.rs
src/config/: config.rs  mod.rs
src/forwarder/: hyper.rs  mod.rs  reqwest.rs
src/gateway/: handler.rs  mod.rs
src/middleware/: mod.rs  modsec.rs
src/modsec/: config.rs  mod.rs
src/response/: mod.rs
src/rewriter/: mod.rs  reqwest.rs
usr/local/modsecurity/lib/pkgconfig/: modsecurity.pc
