[package]
name = "herpy"
version = "0.1.2"
edition = "2021"

[profile.release]
# Enable Link-Time Optimization (LTO)
lto = true
# Enable Compiler Optimizations
opt-level = 3
codegen-units = 16

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14.30", features = ["server"] }
reqwest = { version = "0.11.27" }
anyhow = "1.0.81"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
clap = { version = "4.3.19", features = ["derive"] }
url = "2.5.0"
modsecurity = "0.1.4"
modsecurity-sys = "0.1.2"
glob = "0.3.1"
urlencoding = "2.1.3"